Fix T46544: Can't unpack generated image